# grinta-rs

./: Cargo.toml  README.md  TEST_FIXES.md  TEST_PLAN.md
src/: cli.rs  commands.rs  core.rs  data_sources.rs  history.rs  icons.rs  input.rs  lib.rs  main.rs  state.rs  ui.rs
src/data_sources/: automation.rs  bookmarks.rs  fs.rs  notes.rs  web_search.rs
tests/: integration_tests.rs
